<?xml version="1.0"?>
<package format="3">
    <name>cpp_srvcli</name>
    <version>0.0.0</version>
    <description>C++ service/client example</description>
    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>example_interfaces</build_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>example_interfaces</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>