<?xml version="1.0"?>
<package format="3">
  <name>py_srvcli</name>
  <version>0.0.0</version>
  <description>Python service example</description>
  <maintainer email="ros@todo.todo">ros</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>